Got rid of the last fixed color, finished dark mode

--- a/_sass/_posts_above.scss
+++ b/_sass/_posts_above.scss
@@ -40,7 +40,7 @@
         // LINK TO DETAIL PAGE 
         &-link {
             line-height: 1.2;
-            color: $brand-color;
+            color: var(--special-link__color);
             margin-bottom: $spacing-unit/2;
             letter-spacing: -1px;
         }
@@ -60,7 +60,7 @@
 
     &-title {
         @include relative-font-size(2.25);
-        color: $brand-color;
+        color: var(--special-link__color);
         font-weight: bold;
         letter-spacing: -1px;
         line-height: 0.9;
