--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,9 +9,6 @@ $base-font-weight: 400 !default;
 $base-line-height: 1.5 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 
-// Colors
-$brand-color:              #D90009;
-
 // Width of the content area
 $content-width:    600px;
 
